--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -1,10 +1,14 @@
 amcl:
   ros__parameters:
-    alpha1: 0.1
-    alpha2: 0.1
-    alpha3: 0.1
-    alpha4: 0.1
-    alpha5: 0.1
+    # Alpha parameters define motion model noise in AMCL.
+    # Since DLIO provides high-precision odometry, we assume low odom error.
+    # Low alpha values reduce injected noise, allowing particles to follow DLIO output closely.
+    # AMCL acts mainly as a slow map-to-odom corrector, not primary localization.
+    alpha1: 0.01
+    alpha2: 0.01
+    alpha3: 0.01
+    alpha4: 0.01
+    alpha5: 0.01
     base_frame_id: "base_link"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -16,25 +20,25 @@ amcl:
     laser_max_range: 100.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
-    max_beams: 90
+    max_beams: 90             # ori : 60, Max scan rays use, of scan samples
     max_particles: 2500
     min_particles: 1000
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
-    recovery_alpha_fast: 0.0
-    recovery_alpha_slow: 0.0
+    recovery_alpha_fast: 0.1
+    recovery_alpha_slow: 0.001
     resample_interval: 1
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
-    transform_tolerance: 0.2
-    update_min_a: 0.1
+    transform_tolerance: 0.5  # ori : 1.0
+    update_min_a: 0.05
     update_min_d: 0.05
     z_hit: 0.5
     z_max: 0.05
-    z_rand: 0.2
+    z_rand: 0.3               # ori : 0.5, Random measurement weight, Likelihood randomness
     z_short: 0.05
     scan_topic: scan_hokuyo
 
@@ -102,11 +106,11 @@ controller_server:
       batch_size: 2000
       vx_std: 0.2
       vy_std: 0.0
-      wz_std: 0.6
-      vx_max: 0.5   # 0.5 ok
+      wz_std: 0.6   # ori : 0.4
+      vx_max: 0.5
       vx_min: -0.3  
       vy_max: 0.0
-      wz_max: 3.0   # 2.0?
+      wz_max: 3.0 
       wz_min: -3.5
       ax_max: 2.5   
       ax_min: -2.5  
@@ -119,7 +123,7 @@ controller_server:
       temperature: 0.3
       gamma: 0.015
       motion_model: "DiffDrive"
-      visualize: true
+      visualize: false    # when testing set true
       regenerate_noises: true
       TrajectoryVisualizer:
         trajectory_step: 5
@@ -238,8 +242,8 @@ controller_server:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 5.0
+      update_frequency: 15.0
+      publish_frequency: 15.0
       global_frame: odom
       robot_base_frame: base_link
       rolling_window: true
@@ -268,9 +272,9 @@ local_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 10.0
+          raytrace_max_range: 5.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 5.0
+          obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -280,8 +284,8 @@ local_costmap:
 global_costmap:
   global_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 5.0
+      update_frequency: 15.0
+      publish_frequency: 15.0
       global_frame: map
       robot_base_frame: base_link
       footprint: "[ [-0.41, -0.31], [-0.41, 0.31], [0.41, 0.31], [0.41, -0.31] ]"
@@ -298,9 +302,9 @@ global_costmap:
           clearing: True
           marking: True
           data_type: "LaserScan"
-          raytrace_max_range: 10.0
+          raytrace_max_range: 5.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 5.0
+          obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
