--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -96,27 +96,27 @@ controller_server:
     general_goal_checker:
       stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.08   # 0.07
-      yaw_goal_tolerance: 0.05  # 0.08
+      xy_goal_tolerance: 0.1   # 0.07
+      yaw_goal_tolerance: 0.1  # 0.08
     # MPPI controller
     FollowPath:
       plugin: "nav2_mppi_controller::MPPIController"
-      time_steps: 56
+      time_steps: 36
       model_dt: 0.1
       batch_size: 2000
       vx_std: 0.2
       vy_std: 0.0
-      wz_std: 0.6   # ori : 0.4
+      wz_std: 0.4   # ori : 0.4
       vx_max: 0.5
       vx_min: -0.3  
       vy_max: 0.0
-      wz_max: 3.0 
-      wz_min: -3.5
-      ax_max: 2.5   
-      ax_min: -2.5  
+      wz_max: 2.0 
+      wz_min: -2.0  # ori : 1.9
+      ax_max: 3.0   
+      ax_min: -2.0  
       ay_min: 0.0
       ay_max: 0.0
-      az_max: 5.0
+      az_max: 3.5   # ori : 3.5
       iteration_count: 1
       prune_distance: 1.7
       transform_tolerance: 0.1
@@ -129,7 +129,7 @@ controller_server:
         trajectory_step: 5
         time_step: 3
       AckermannConstraints:
-        min_turning_r: 0.5  # test
+        min_turning_r: 0.0  # test
       critics: [
         "ConstraintCritic", "CostCritic", "GoalCritic",
         "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic",
@@ -141,12 +141,12 @@ controller_server:
       GoalCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 20.0
+        cost_weight: 25.0
         threshold_to_consider: 1.4    # ori : 1.4
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 7.0
         threshold_to_consider: 0.2    # ori : 0.5  
       PreferForwardCritic:
         enabled: true
@@ -403,10 +403,10 @@ velocity_smoother:
     smoothing_frequency: 10.0
     scale_velocities: False
     feedback: "CLOSED_LOOP"   # CLOSED_LOOP reference is odom, OPEN_LOOP reference is /cmd_vel
-    max_velocity: [0.5, 0.0, 3.0]     # x, y, z
-    min_velocity: [-0.3, 0.0, -3.0]   # x, y, z
-    max_accel: [2.5, 0.0, 5.0]
-    max_decel: [-2.5, 0.0, -5.0]
+    max_velocity: [0.5, 0.0, 2.0]     # x, y, z
+    min_velocity: [-0.3, 0.0, -2.0]   # x, y, z
+    max_accel: [3.0, 0.0, 3.5]
+    max_decel: [-2.0, 0.0, -3.5]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.03, 0.0, 0.05]  # avoid jitter. x, y, z
