--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -141,13 +141,13 @@ controller_server:
       GoalCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 25.0
+        cost_weight: 30.0   # 25
         threshold_to_consider: 1.4    # ori : 1.4
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 7.0
-        threshold_to_consider: 0.2    # ori : 0.5  
+        cost_weight: 10.0   # fir : 7, sec : 15
+        threshold_to_consider: 0.3    # ori : 0.5  
       PreferForwardCritic:
         enabled: true
         cost_power: 1
